# demo-app

./: pyproject.toml
api/cruds/: task.py
api/routers/: task.py
